<resources>
    <string name="app_name">OsagoCalc</string>
    <string name="titleOsago">Калькулятор ОСАГО</string>
    <string name="cofs">Ваши коэффициенты</string>
    <string name="basicRate">(Базовый тариф)</string>
    <string name="basicRateNumber">2 754 - 4 432 ₽</string>
    <string name="basicRateDesc">Устанавливает страховая компания</string>
    <string name="cofPower">(коэфф. мощности)</string>
    <string name="cofPowerNumber">0,6 - 1,6</string>
    <string name="cofPowerDesc">Чем мощнее автомобиль, тем дороже страховой полис</string>
    <string name="regionCof">(территориальный коэфф.)</string>
    <string name="regionCofNumber">0,64 - 1,99</string>
    <string name="regionCofDesc">Определяется по прописке собственника автомобиля</string>
    <string name="noAccCof">(коэфф. безаварийности)</string>
    <string name="noAccCofNumber">0,5 - 2,45</string>
    <string name="noAccCofDesc">Учитывается только самый высокий коэффициент из всех водителей</string>
    <string name="expCof">(коэфф. возраст/стаж)</string>
    <string name="expCofNumber">0,90 - 1,93</string>
    <string name="expCofDesc">Чем больше возраст и стаж вписанного в полис водителя, тем дешевле будет полис</string>
    <string name="restrCof">(коэфф. ограничений)</string>
    <string name="restrCofNumber">1 или 1,99</string>
    <string name="restrCofDesc">Полис с ограниченным списком водителей будет стоить дешевле</string>
    <string name="cofsBlue">БТ×КМ×КТ×КБМ×КО×КВС</string>
    <string name="cofsBlues">БТ КМ КТ КБМ КО КВС</string>
    <string name="calculate">Рассчитать ОСАГО</string>
    <string name="alt0215">×</string>
    <string name="cityOfRegOwner">Город регистрации собственника</string>
    <string name="enginePower">Мощность автомобиля</string>
    <string name="numberOfDrivers">Сколько видителей</string>
    <string name="youngestDriverAge">Возраст младщего из водителей</string>
    <string name="minExpDrivers">Минимальный стаж водителей</string>
    <string name="yearsWoa">Сколько лет не было аварий</string>
    <string name="inputCity">Введите город</string>
    <string name="inputEnginePower">Введите мощность двигателя</string>
    <string name="inputNumberDrivers">Введите количество водителей</string>
    <string name="inputMinDriverExp">Введите минимальный стаж</string>
    <string name="inputNoAccYears">Введите сколько лет не было аварий</string>
    <string name="forwardBtn">Далее ></string>
    <string name="backBtn">&lt;</string>
    <string-array name="yourCofs">
        <item>БТ</item>
        <item>КМ</item>
        <item>КТ</item>
        <item>КБМ</item>
        <item>КМ</item>
        <item>КО</item>
        <item>КБС</item>
    </string-array>
</resources>