<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/CalcTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F4F7FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto"
            android:text="@string/titleOsago"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F4F7FB"
        app:layout_constraintBottom_toTopOf="@+id/СardView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CalcTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F4F7FB">

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/hidden_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="66dp"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/constaintLayout2">

                    <!--Child LinearLayout 1-->

                    <!--Child LinearLayout 2-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_calc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="Database Management"
                            android:textColor="#000000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_calc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="Database Management"
                            android:textColor="#000000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_calc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="Database Management"
                            android:textColor="#000000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_calc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="Database Management"
                            android:textColor="#000000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_calc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="Data Structures"
                            android:textColor="#000000"
                            android:textSize="20dp" />
                    </LinearLayout>

                    <!--Child LinearLayout 3-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_calc" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="20dp"
                            android:text="Operating Systems"
                            android:textColor="#000000"
                            android:textSize="20dp" />
                    </LinearLayout>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constaintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/arrow_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textDesc"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_baseline_expand_less_24" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/CardViewLogo"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        app:cardCornerRadius="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#F4F7FB"
                            android:padding="8dp"
                            app:srcCompat="@drawable/ic_calc" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/cofs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/cofs"
                        android:textAlignment="viewStart"
                        android:textSize="12sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/CardViewLogo"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.205" />

                    <TextView
                        android:id="@+id/textDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/cofsBlue"
                        android:textAlignment="viewStart"
                        android:textColor="#2196F3"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/CardViewLogo" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/CardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/CardView1">

                <TextView
                    android:id="@+id/cityOfRegOwner"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/cardviewshape"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:textAlignment="viewStart"
                    android:textSize="16sp"
                    android:text="@string/cityOfRegOwner"/>

                <TextView
                    android:id="@+id/enginePower"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="80dp"
                    android:background="@drawable/cardviewshape"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/enginePower"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/numberOfDrivers"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="160dp"
                    android:background="@drawable/cardviewshape"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/numberOfDrivers"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/youngestDriverAge"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="240dp"
                    android:background="@drawable/cardviewshape"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/youngestDriverAge"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/minExpDrivers"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="320dp"
                    android:background="@drawable/cardviewshape"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/minExpDrivers"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/yearsWithOutAcc"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="400dp"
                    android:background="@drawable/cardviewshape"
                    android:clickable="false"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:text="@string/yearsWoa"
                    android:textAlignment="viewStart"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <androidx.cardview.widget.CardView
        android:id="@+id/СardView3"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/calculateOsago"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:layout_gravity="center|center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#F4F7FB"
            android:fontFamily="@font/roboto"
            android:text="@string/calculate"
            android:textAllCaps="false"
            android:textColor="#C4C4C4"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="20sp" />

        <View
            android:layout_width="100dp"
            android:layout_height="4dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/shape" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>